# shABman

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.de.md  README.md  hacs.json  manifest.json  pyproject.toml  pytest.ini  requirements_test.txt
.github/ISSUES_TEMPLATE/: bug_report.yaml  config.yaml  config_problem.yaml  feature_request.yaml
.github/workflows/: ci.yaml  hacs.yaml  hassfest.yaml  test.yaml  validate.yaml
custom_components/shabman/: __init__.py  config_flow.py  const.py  coordinator.py  helpers.py  manifest.json  options_flow.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/shabman/translations/: de.json  en.json
scripts/: test-local.ps1  test-local.sh
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_icon.py  test_init.py  test_options_flow.py  test_sensor.py  test_service.py  test_switch.py
