# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shabman"
version = "0.1.0"
description = "Shelly Script Manager for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = ["-v", "--strict-markers", "--tb=short"]
# Logging
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(message)s"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear

]
ignore = [
    "E501", # Line too long (handled by formatter)

]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
