# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shabman"
version = "0.1.0"
description = "Shelly Script Manager for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio==0.23.8",
    "pytest-cov>=4.1.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "aioresponses>=0.7.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components/*"]
exclude = ["images*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
addopts = ["-v", "--strict-markers", "--tb=short"]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(levelname)-8s %(message)s"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear

]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
